<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="@dimen/define_dimen_14"
    android:weightSum="2">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/define_dimen_10"
        android:layout_marginBottom="@dimen/define_dimen_10"
        android:layout_weight="1.9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/define_dimen_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTotalCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/label_total_calories"
            android:textColor="@color/main_brown"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPersonTotalCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/label_person_total_calories"
            android:textColor="@color/main_brown"
            android:textStyle="bold" />

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:paddingLeft="@dimen/define_dimen_10">

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_age"
            android:textColor="@color/main_brown"
            android:textSize="@dimen/define_dimen_12"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/define_dimen_2" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="@dimen/define_dimen_200"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_corner_30_border_brown"
            android:hint="@string/hint_age"
            android:inputType="number"
            android:padding="@dimen/define_dimen_8"
            android:textColorHint="@color/textColorAccent"
            android:textSize="@dimen/define_dimen_14"
            app:layout_constraintStart_toEndOf="@id/tv_age"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/define_dimen_80" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:paddingLeft="@dimen/define_dimen_10">

        <!-- TextView and EditText for height -->
        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_height"
            android:textColor="@color/main_brown"
            android:textSize="@dimen/define_dimen_12"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/define_dimen_10" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="@dimen/define_dimen_200"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_corner_30_border_brown"
            android:hint="@string/hint_height"
            android:inputType="numberDecimal"
            android:padding="@dimen/define_dimen_8"
            android:textColorHint="@color/textColorAccent"
            android:textSize="@dimen/define_dimen_14"
            app:layout_constraintStart_toEndOf="@id/tv_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/define_dimen_18" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:paddingLeft="@dimen/define_dimen_10">

        <!-- TextView and EditText for weight -->
        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_weight"
            android:textColor="@color/main_brown"
            android:textSize="@dimen/define_dimen_12"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="@dimen/define_dimen_200"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_corner_30_border_brown"
            android:hint="@string/hint_weight"
            android:inputType="numberDecimal"
            android:padding="@dimen/define_dimen_8"
            android:textColorHint="@color/textColorAccent"
            android:textSize="@dimen/define_dimen_14"
            app:layout_constraintStart_toEndOf="@id/tv_weight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/define_dimen_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_calculate_bmi"
        android:layout_width="@dimen/define_dimen_150"
        android:layout_height="@dimen/define_dimen_40"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/define_dimen_16"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_button_enable_corner_10"
        android:text="@string/button_calculate"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_calorie_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:text="@string/result_calories"
        android:visibility="gone" />
</LinearLayout>