<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:src="@drawable/otterchef"
        android:alpha="0.65"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/define_dimen_18"
            android:background="@color/semi_transparent_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_login"
                android:layout_marginTop="@dimen/define_dimen_30"
                android:textColor="@color/main_brown"
                android:textStyle="bold"
                android:textSize="@dimen/define_dimen_30"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_language"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="•"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_change_language"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/btn_change_language"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Email input field (kept as it is) -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:layout_marginTop="@dimen/define_dimen_30"
                android:textColor="@color/main_brown"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_12sp"/>

            <!-- Password input field with the eye icon -->

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_5"
                android:background="@drawable/bg_white_corner_30_border_brown"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="@dimen/define_dimen_18"
                android:textColor="@color/textColorHeading"
                android:textColorHint="@color/textColorAccent"
                android:textSize="@dimen/text_size_14sp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                android:layout_marginTop="@dimen/define_dimen_14"
                android:textColor="@color/main_brown"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_12sp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_5">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_white_corner_30_border_brown"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/define_dimen_18"
                    android:textColor="@color/textColorHeading"
                    android:textColorHint="@color/textColorAccent"
                    android:textSize="@dimen/text_size_14sp"
                    tools:ignore="Autofill" />

                <ImageView
                    android:id="@+id/img_toggle_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_marginRight="@dimen/define_dimen_10"
                    android:src="@drawable/ic_eye_closed"
                    android:layout_gravity="end|center_vertical" />
            </FrameLayout>
            <!-- Login button (kept as it is) -->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_30"
                android:textAllCaps="false"
                android:background="@drawable/bg_button_disable_corner_10"
                android:text="@string/label_login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:padding="@dimen/define_dimen_10"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/label_forgot_password"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/define_dimen_18"
            android:background="@color/semi_transparent_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_have_not_account"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/define_dimen_6"
                android:text="@string/label_register"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
